--- a/Software/Solarregler/Solarregler.ioc
+++ b/Software/Solarregler/Solarregler.ioc
@@ -1,10 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 CAN.BS1=CAN_BS1_12TQ
 CAN.BS2=CAN_BS2_5TQ
-CAN.CalculateTimeBit=8000
-CAN.CalculateTimeQuantum=444.44444444444446
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,BS2,Mode
+CAN.CalculateTimeBit=4000
+CAN.CalculateTimeQuantum=222.22222222222223
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,Prescaler,BS2,Mode
 CAN.Mode=CAN_MODE_LOOPBACK
+CAN.Prescaler=8
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F1
@@ -66,6 +67,8 @@ Mcu.UserName=STM32F103RBTx
 MxCube.Version=4.27.0
 MxDb.Version=DB.4.0.270
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -77,6 +80,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=C2
