--- a/Software/Solarregler/Solarregler.ioc
+++ b/Software/Solarregler/Solarregler.ioc
@@ -83,16 +83,19 @@ NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true
-PA10.GPIOParameters=GPIO_Label
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=C2
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPIO_Input
-PA11.GPIOParameters=GPIO_Label
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=C1
+PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Locked=true
 PA11.Signal=GPIO_Input
-PA12.GPIOParameters=GPIO_Label
+PA12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA12.GPIO_Label=C0
+PA12.GPIO_PuPd=GPIO_PULLUP
 PA12.Locked=true
 PA12.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
@@ -142,12 +145,14 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=CS_1
 PA7.Locked=true
 PA7.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=C4
+PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
 PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_Label
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=C3
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
 PB0.GPIOParameters=GPIO_Label
@@ -157,7 +162,7 @@ PB0.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=CS_3
 PB1.Locked=true
-PB1.Signal=GPIO_Input
+PB1.Signal=GPIO_Output
 PB11.Locked=true
 PB11.Signal=GPIO_Input
 PB12.Locked=true
@@ -205,21 +210,24 @@ PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=DRDY_2
 PC4.Locked=true
-PC4.Signal=GPIO_Output
+PC4.Signal=GPIO_Input
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=CS_2
 PC5.Locked=true
-PC5.Signal=GPIO_Input
-PC7.GPIOParameters=GPIO_Label
+PC5.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=C7
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.Locked=true
 PC7.Signal=GPIO_Input
-PC8.GPIOParameters=GPIO_Label
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC8.GPIO_Label=C6
+PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.Locked=true
 PC8.Signal=GPIO_Input
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC9.GPIO_Label=C5
+PC9.GPIO_PuPd=GPIO_PULLUP
 PC9.Locked=true
 PC9.Signal=GPIO_Input
 PCC.Checker=false
@@ -306,7 +314,7 @@ USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate,Mode,WordLength
 USART2.Mode=MODE_TX_RX
 USART2.VirtualMode=VM_ASYNC
-USART2.WordLength=WORDLENGTH_9B
+USART2.WordLength=WORDLENGTH_8B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
