--- a/Software/Solarregler/Solarregler.ioc
+++ b/Software/Solarregler/Solarregler.ioc
@@ -1,11 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
-CAN.BS1=CAN_BS1_12TQ
-CAN.BS2=CAN_BS2_5TQ
-CAN.CalculateTimeBit=4000
-CAN.CalculateTimeQuantum=222.22222222222223
+CAN.BS1=CAN_BS1_9TQ
+CAN.BS2=CAN_BS2_2TQ
+CAN.CalculateTimeBit=2000
+CAN.CalculateTimeQuantum=166.66666666666669
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS1,Prescaler,BS2,Mode
-CAN.Mode=CAN_MODE_LOOPBACK
-CAN.Prescaler=8
+CAN.Mode=CAN_MODE_NORMAL
+CAN.Prescaler=6
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F1
