MAX MIN und Regler Aktiv implementiert

--- a/Software/Solarregler/Solarregler.ioc
+++ b/Software/Solarregler/Solarregler.ioc
@@ -13,11 +13,12 @@ Mcu.IP0=CAN
 Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP4=RTC
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -52,15 +53,17 @@ Mcu.Pin34=PB6
 Mcu.Pin35=PB7
 Mcu.Pin36=PB8
 Mcu.Pin37=PB9
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin38=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_RTC_No_RTC_Output
 Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=40
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -271,30 +274,30 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
-RCC.ADCFreqValue=36000000
-RCC.AHBFreq_Value=72000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true
+RCC.ADCFreqValue=18000000
+RCC.AHBFreq_Value=36000000
 RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
+RCC.APB1TimFreq_Value=36000000
+RCC.APB2Freq_Value=36000000
+RCC.APB2TimFreq_Value=36000000
+RCC.FCLKCortexFreq_Value=36000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
-RCC.PLLMCOFreq_Value=36000000
+RCC.HCLKFreq_Value=36000000
+RCC.HSEDivPLL=RCC_HSE_PREDIV_DIV2
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=36000000
+RCC.PLLCLKFreq_Value=36000000
+RCC.PLLMCOFreq_Value=18000000
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
-RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKFreq_VALUE=36000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=72000000
-RCC.USBFreq_Value=72000000
-RCC.VCOOutput2Freq_Value=8000000
+RCC.TimSysFreq_Value=36000000
+RCC.USBFreq_Value=36000000
+RCC.VCOOutput2Freq_Value=4000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
@@ -315,6 +318,10 @@ USART2.IPParameters=VirtualMode,BaudRate,Mode,WordLength
 USART2.Mode=MODE_TX_RX
 USART2.VirtualMode=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
+VP_RTC_No_RTC_Output.Mode=RTC_OUT_NO
+VP_RTC_No_RTC_Output.Signal=RTC_No_RTC_Output
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
